# Studies

./: Makefile  README.md  problem_lx_main.c  secret.elf64.x
FPGA/: README.md
FPGA/Basic_GPIO/: Basic_GPIO.qpf  alien_debouncer.v  clicker.v  clicker.v.bak  clk_div.v  counter.v  hex_display.v  hex_display.v.bak  top.qsf  top.qws  top.v  top.v.bak
FPGA/drec_course/: README.md
FPGA/fibonacci_counter/: CMakeLists.txt  README.md
findbug/: fib.elf64.s  isprime.elf64.s
games/fibonacci nim/: README.md  st-int_fg-s_v1.2.c
games/fibonacci_nim/: README.md  st-int_fg-s_v1.1.c  st-int_fg-s_v1.2.c
games/nim/: README  (+2 more)
judge/: addition.c  matrix.c  task_schedule.c
project_Euler/: CMakeLists.txt
project_Euler/001_multiples-of-3-and-5/: 001.cpp  CMakeLists.txt  main.c
project_Euler/002_even-fib-nums/: 002.cpp  CMakeLists.txt  bit_optimized.c  rather_naive.c
project_Euler/003_largest-prime/: 003.cpp  CMakeLists.txt  a.out  algs_h.c  algs_h.h  main.c
project_Euler/004_largest-palindrome-product/: 004.cpp  CMakeLists.txt
project_Euler/005_smallest-multiple/: 005.cpp  CMakeLists.txt
project_Euler/006_sum-square-difference/: 006.cpp  CMakeLists.txt
project_Euler/007_10001st-prime/: 007.cpp  CMakeLists.txt
project_Euler/008_largest-product-in-a-series/: 008.cpp  CMakeLists.txt
project_Euler/009_special-pythagorean-triplet/: 009.cpp  CMakeLists.txt
project_Euler/010_summation_of_primes/: 010.cpp  CMakeLists.txt
seminar-5/: README.md
seminar-6/: problem_rp.c
seminar-7/: Makefile  additions.c  additions.h  codecs.c  codecs.h  lexer.h  problem_as.c
(+162 files in other folders)
