cmake_minimum_required(VERSION 3.27.0)
project(project_Euler)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_COLOR_DIAGNOSTICS ON)

add_subdirectory(001_multiples-of-3-and-5)
add_subdirectory(002_even-fib-nums)
add_subdirectory(003_largest-prime)
add_subdirectory(004_largest-palindrome-product)
add_subdirectory(005_smallest-multiple)
add_subdirectory(006_sum-square-difference)
add_subdirectory(007_10001st-prime)
add_subdirectory(008_largest-product-in-a-series)
